--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,7 @@ a {
 }
 
 .testimonials_sections:nth-child(1) {
-  margin-bottom: 90px;
+  margin-bottom: 110px;
 }
 
 .testimonials_sections:nth-child(2) {
@@ -118,7 +118,7 @@ td {
   background-color: #333333;
   border: 1px solid #333333;
   color: #fff;
-  padding: 2%;
+  padding: 1.5%;
   font-size: 0.9em;
   margin-right: 1%;
 }
@@ -127,7 +127,7 @@ td {
   background-color: #cccccc;
   color: #333333;
   border: 1px solid #cccccc;
-  padding: 2%;
+  padding: 1.5%;
   font-size: 0.9em;
 }
 
@@ -170,6 +170,15 @@ td {
   height: 200px;
 }
 
+/* View Page */
+
+.view_page {
+  margin-bottom: 20px;
+}
+
+.view_page th {
+}
+
 /* Contact */
 
 #contact_info {
@@ -193,6 +202,12 @@ td {
 #contact_form textarea {
   width: 100%;
   height: 130px;
+}
+
+/* Delete Entry */
+
+#delete_entry {
+  margin-bottom: 40px;
 }
 
 /* Settings */
