--- a/css/nav.css
+++ b/css/nav.css
@@ -14,10 +14,6 @@ ul {
    display: inline-block;
    position: relative;
    float: left;
- }
-
- li ul {
-   display: none;
 
  }
 
@@ -27,13 +23,23 @@ ul {
    white-space: nowrap;
    color: #fff;
    background: #333333;
+   padding-right: 38.8%;
+   padding-left: 39%;
    padding-top: 30px;
    padding-bottom: 30px;
-   padding-left: 20%;
-   padding-right: 51.9%;
    font-size: 1.2em;
    font-weight: bold;
  }
+
+ li ul {
+   display: none;
+ }
+
+ li ul a {
+   padding-left: 10%;
+   padding-right: 90%;
+ }
+
 
  ul li a:hover {
    background: #cccccc;
@@ -43,10 +49,6 @@ ul {
  li:hover ul {
    display: block;
    position: absolute;
- }
-
- li:hover li {
-   float: none;
  }
 
  #active-item {
