--- a/css/main.css
+++ b/css/main.css
@@ -217,3 +217,11 @@ td {
   border-top: 1px solid #cccccc;
 
 }
+
+/* Responsive Media Queries */
+
+@media screen and (max-width:480px) {
+      body {
+        width: 100%;
+      }
+    }
