--- a/css/main.css
+++ b/css/main.css
@@ -223,5 +223,7 @@ td {
 @media screen and (max-width:480px) {
       body {
         width: 100%;
+        margin: 0;
+        padding: 0;
       }
     }
