--- a/css/main.css
+++ b/css/main.css
@@ -220,7 +220,7 @@ td {
 
 /* Responsive Mobile */
 
-@media only screen
+@media screen
   and (min-device-width: 320px)
   and (max-device-width: 480px)
   and (-webkit-min-device-pixel-ratio: 2) {
@@ -233,7 +233,7 @@ td {
 
 /* Responsive Tablet */
 
-@media only screen
+@media screen
   and (min-device-width: 768px)
   and (max-device-width: 1024px)
   and (-webkit-min-device-pixel-ratio: 1) {
