--- a/css/main.css
+++ b/css/main.css
@@ -220,10 +220,7 @@ td {
 
 /* Responsive Mobile */
 
-@media screen
-  and (min-device-width: 320px)
-  and (max-device-width: 480px)
-  and (-webkit-min-device-pixel-ratio: 2) {
+@media screen and (max-width: 480px) {
       body {
         width: 100%;
         margin: 0;
@@ -233,10 +230,7 @@ td {
 
 /* Responsive Tablet */
 
-@media screen
-  and (min-device-width: 768px)
-  and (max-device-width: 1024px)
-  and (-webkit-min-device-pixel-ratio: 1) {
+@media screen and (max-width: 1024px) {
       body {
         width: 100%;
         margin: 0;
