--- a/css/header.css
+++ b/css/header.css
@@ -41,9 +41,7 @@ header button {
 
 @media screen and (max-width: 480px) {
       #logo {
-        width: 50%;
-        margin-left: 3%;
-        margin-top: 80px;
+        display: none;
       }
     }
 
