--- a/css/header.css
+++ b/css/header.css
@@ -41,7 +41,7 @@ header button {
 
 @media screen and (max-width: 480px) {
       #logo {
-        display: none;
+        width: 80%;
       }
     }
 
