--- a/css/nav.css
+++ b/css/nav.css
@@ -63,7 +63,7 @@ ul {
 
  @media screen and (max-width: 480px) {
        nav {
-         align: center; 
+         padding-right: 0;
        }
      }
 
