--- a/css/nav.css
+++ b/css/nav.css
@@ -65,7 +65,8 @@ ul {
       ul li a {
         width: 100%;
         padding: 0;
-        display: block;
+        float: left;
+        clear: left;
       }
 
       li ul a {
