--- a/css/header.css
+++ b/css/header.css
@@ -41,17 +41,27 @@ header button {
 
 @media screen and (max-width: 480px) {
       #logo {
-        width: 60%;
-        margin-bottom: 0px;
+        width: 80%
+      }
+
+      #settings {
+        margin-left: 0;
+        margin-right: 500%;
+      }
+
+      .header-btn {
+        margin-top: 98px;
+      }
+
+      #content {
+        margin-top: 0;
       }
     }
 
 /* Responsive Tablet */
 
-@media screen and (max-width: 1024px) {
-      body {
-        width: 100%;
-        margin: 0;
-        padding: 0;
+@media screen and (min-width: 481px) and (max-width: 1024px) {
+      .header-btn {
+        margin-left: 27%;
       }
     }
