--- a/css/main.css
+++ b/css/main.css
@@ -212,15 +212,15 @@ td {
 
 /* Settings */
 
-.settings:nth-child(3) {
-  margin-top: 30px;
+.settings:nth-child(3), .settings:nth-child(4) {
   border-top: 1px solid #cccccc;
+  margin-top: 30px;
 
 }
 
 /* Responsive Mobile */
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 481px) {
       body {
         width: 100%;
         margin: 0;
@@ -229,6 +229,11 @@ td {
 
       #main_content{
         margin-top: 70px;
+      }
+
+      #content {
+        margin-left: 1%;
+        margin-right: 1%;
       }
 
       .form_input {
@@ -267,7 +272,7 @@ td {
 
 /* Responsive Tablet */
 
-@media screen and (min-width: 481px) and (max-width: 1024px) {
+@media screen and (min-width: 482px) and (max-width: 1024px) {
       body {
         width: 100%;
         margin: 0;
