--- a/css/main.css
+++ b/css/main.css
@@ -212,15 +212,15 @@ td {
 
 /* Settings */
 
-.settings:nth-child(3), .settings:nth-child(4) {
-  border-top: 1px solid #cccccc;
+.settings:nth-child(3) {
   margin-top: 30px;
+  border-top: 1px solid #cccccc;
 
 }
 
 /* Responsive Mobile */
 
-@media screen and (max-width: 481px) {
+@media screen and (max-width: 480px) {
       body {
         width: 100%;
         margin: 0;
@@ -229,11 +229,6 @@ td {
 
       #main_content{
         margin-top: 70px;
-      }
-
-      #content {
-        margin-left: 1%;
-        margin-right: 1%;
       }
 
       .form_input {
@@ -272,7 +267,7 @@ td {
 
 /* Responsive Tablet */
 
-@media screen and (min-width: 482px) and (max-width: 1024px) {
+@media screen and (min-width: 481px) and (max-width: 1024px) {
       body {
         width: 100%;
         margin: 0;
