--- a/css/header.css
+++ b/css/header.css
@@ -41,27 +41,17 @@ header button {
 
 @media screen and (max-width: 480px) {
       #logo {
-        width: 80%
-      }
-
-      #settings {
-        margin-left: 0;
-        margin-right: 500%;
-      }
-
-      .header-btn {
-        margin-top: 98px;
-      }
-
-      #content {
-        margin-top: 0;
+        width: 60%;
+        margin-bottom: 20px;
       }
     }
 
 /* Responsive Tablet */
 
-@media screen and (min-width: 481px) and (max-width: 1024px) {
-      .header-btn {
-        margin-left: 27%;
+@media screen and (max-width: 1024px) {
+      body {
+        width: 100%;
+        margin: 0;
+        padding: 0;
       }
     }
