--- a/css/header.css
+++ b/css/header.css
@@ -10,7 +10,7 @@ header {
 }
 
 #settings {
-  margin-left: 27.4%;
+  margin-left: 18%;
 }
 
 header button {
@@ -39,25 +39,19 @@ header button {
 
 /* Responsive Mobile */
 
-@media screen and (max-width: 481px) {
+@media screen and (max-width: 480px) {
       #logo {
-        width: 80%
-      }
-
-      #settings {
-        margin-left: 0;
-        margin-top: 98px;
-      }
-
-      #content {
-        margin-top: 0;
+        width: 60%;
+        margin-bottom: 20px;
       }
     }
 
 /* Responsive Tablet */
 
-@media screen and (min-width: 482px) and (max-width: 1024px) {
-      #settings {
-        margin-left: 31.5%;
+@media screen and (max-width: 1024px) {
+      body {
+        width: 100%;
+        margin: 0;
+        padding: 0;
       }
     }
