--- a/css/main.css
+++ b/css/main.css
@@ -212,100 +212,28 @@ td {
 
 /* Settings */
 
-.settings:nth-child(3), .settings:nth-child(4) {
-  border-top: 1px solid #cccccc;
+.settings:nth-child(3) {
   margin-top: 30px;
+  border-top: 1px solid #cccccc;
 
 }
 
 /* Responsive Mobile */
 
-@media screen and (max-width: 481px) {
+@media screen and (max-width: 480px) {
       body {
         width: 100%;
         margin: 0;
         padding: 0;
-      }
-
-      #main_content{
-        margin-top: 70px;
-      }
-
-      #content {
-        margin-left: 1%;
-        margin-right: 1%;
-      }
-
-      .form_input {
-        width: 55%;
-        padding: 1.8%;
-      }
-
-      .personas {
-        width: 50%;
-      }
-
-      #contact_form {
-        clear: left;
-        margin-left: 0;
-      }
-
-      #form_heading1 input {
-        width: 297%;
-      }
-
-      #form_heading2 input {
-        width: 275%;
-      }
-
-      #form_heading2, #form_heading input {
-        margin-left: 0;
-        clear: left;
-      }
-
-      #entry_form img {
-        width: 10%;
-        margin-top: 62px;
-        margin-left: 54%;
       }
     }
 
 /* Responsive Tablet */
 
-@media screen and (min-width: 482px) and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
       body {
         width: 100%;
         margin: 0;
         padding: 0;
-      }
-
-      #form_heading1 input {
-        width: 350%;
-      }
-
-      #form_heading2 input {
-        width: 263%;
-      }
-
-      #form_heading2, #form_heading input {
-        margin-left: 40%;
-      }
-
-      #entry_form img {
-        width: 3%;
-        margin-left: 24%;
-      }
-
-      #contact_form {
-        clear: left;
-        margin-left: 0;
-      }
-
-      #contact_form input {
-        width: 50%;
-      }
-
-      #contact_form textarea {
-        width: 60%;
       }
     }
